implementação de front end para uso da api de text-processing